<resources>
    <string name="app_name">Tugas Sensor AKB 10119253</string>
    <string name="title_profile">Profile</string>
    <string name="title_location">Location</string>
    <string name="title_about">About</string>
    <string name="ini_about">Ini About</string>
    <string name="ini_profil">Ini Profile</string>
    <string name="nama">Mochamad Adi Maulia Rachman</string>
    <string name="nim">10119253</string>
    <string name="email">adi.10119253@mahasiswa.unikom.ac.id</string>
    <string name="kelas">Informatika-7</string>
    <string name="namaaplikasi">Aplikasi Google Maps</string>

    <string name="deskripsi">Memanfaatkan Sensor GPS Untuk Menampilkan Lokasi Anda dan Menampilkan 5 Lokasi Tempat Makan Terfavorit</string>
    <string name="kosong" />
    <string name="version">Beta 0.2.7–20220504</string>
    <string name="versiontext">App Version</string>
    <string name="namatitle">NAMA</string>
    <string name="nimtitle">NIM</string>
    <string name="kelastitle">KELAS</string>
    <string name="emailtitle">EMAIL</string>
    <string name="aplikasi_google_maps">Aplikasi Google Maps</string>
    <string name="logo">Logo</string>
    <string name="empty">Empty</string>
    <string name="fotoprofile">fotoprofle</string>
</resources>