<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:padding="5dp"
        android:src="@drawable/fotodiri"
        />

    <TextView
        android:id="@+id/Space1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfile"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kosong" />

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Space1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/namatitle"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNameTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/nama"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kosong" />

    <TextView
        android:id="@+id/tvNimTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Space2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/nimtitle"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvNim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNimTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/nim"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/Space3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNim"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kosong" />

    <TextView
        android:id="@+id/tvKelasTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Space3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kelastitle"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvKelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvKelasTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kelas"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/Space4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvKelas"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/kosong" />

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Space4"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/emailtitle"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmailTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="18sp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>